find_package(Paradiseo)

#To fill
include_directories(${PARADISEO_INCLUDE_DIR})
include_directories(${CMAKE_SOURCE_DIR}/src)
# add_executable(...)
add_executable(MAIN main.cpp ../src/BinaryParticle.h ../src/BinaryVelocity.h ../src/FMOPSOTopology.h ../src/PartiallyOrderedSetFlight.h ../src/NRPAttribute.h ../src/NRPEvalAttributeWrapper.h ../src/NRPProblem.h ../src/CostNRPAttribute.h ../src/ProfitNRPAttribute.h ../src/VonNeumannTopology.h ../src/FuzzyFitnessFunction.h ../src/FuzzyNumber.h ../src/LRFuzzyNumber.h ../src/LinearMonotonicFuzzyNumber.h ../src/ExpWeightedFuzzyNumberDecorator.h ../src/AbstractFuzzyTNorm.h ../src/MinFuzzyTNorm.h ../src/BiObjFuzzyNRPFitnessFunction.h ../src/FMOPSOAlgorithm.h ../src/FMOPSOBinaryVelocity.h ../src/BiObjFuzzyNRPFitness.h ../src/BiObjNRPVectorTraits.h ../src/BiObjNRPMOEval.h ../src/MOVectorParticle.h ../src/MOBinaryParticle.h ../src/FuzzyFitnessSingleObjectivization.h ../src/NRPMutation.h ../src/NRPCrossover.h)

add_executable(BiObjNRP_FMOPSO BiObjNRP_FMOPSO.cpp ../src/BinaryParticle.h ../src/BinaryVelocity.h ../src/FMOPSOTopology.h ../src/PartiallyOrderedSetFlight.h ../src/NRPAttribute.h ../src/NRPEvalAttributeWrapper.h ../src/NRPProblem.h ../src/CostNRPAttribute.h ../src/ProfitNRPAttribute.h ../src/VonNeumannTopology.h ../src/FuzzyFitnessFunction.h ../src/FuzzyNumber.h ../src/LRFuzzyNumber.h ../src/LinearMonotonicFuzzyNumber.h ../src/ExpWeightedFuzzyNumberDecorator.h ../src/AbstractFuzzyTNorm.h ../src/MinFuzzyTNorm.h ../src/BiObjFuzzyNRPFitnessFunction.h ../src/FMOPSOAlgorithm.h ../src/FMOPSOBinaryVelocity.h ../src/BiObjFuzzyNRPFitness.h ../src/BiObjNRPVectorTraits.h ../src/BiObjNRPMOEval.h ../src/MOVectorParticle.h ../src/MOBinaryParticle.h ../src/FuzzyFitnessSingleObjectivization.h ../src/NRPMutation.h ../src/NRPCrossover.h)
add_executable(BiObjNRP_NSGAII BiObjNRP_NSGAII.cpp ../src/BinaryParticle.h ../src/BinaryVelocity.h ../src/FMOPSOTopology.h ../src/PartiallyOrderedSetFlight.h ../src/NRPAttribute.h ../src/NRPEvalAttributeWrapper.h ../src/NRPProblem.h ../src/CostNRPAttribute.h ../src/ProfitNRPAttribute.h ../src/VonNeumannTopology.h ../src/FuzzyFitnessFunction.h ../src/FuzzyNumber.h ../src/LRFuzzyNumber.h ../src/LinearMonotonicFuzzyNumber.h ../src/ExpWeightedFuzzyNumberDecorator.h ../src/AbstractFuzzyTNorm.h ../src/MinFuzzyTNorm.h ../src/BiObjFuzzyNRPFitnessFunction.h ../src/FMOPSOAlgorithm.h ../src/FMOPSOBinaryVelocity.h ../src/BiObjFuzzyNRPFitness.h ../src/BiObjNRPVectorTraits.h ../src/BiObjNRPMOEval.h ../src/MOVectorParticle.h ../src/MOBinaryParticle.h ../src/FuzzyFitnessSingleObjectivization.h ../src/NRPMutation.h ../src/NRPCrossover.h)
add_executable(BiObjNRP_SPEA2 BiObjNRP_SPEA2.cpp ../src/BinaryParticle.h ../src/BinaryVelocity.h ../src/FMOPSOTopology.h ../src/PartiallyOrderedSetFlight.h ../src/NRPAttribute.h ../src/NRPEvalAttributeWrapper.h ../src/NRPProblem.h ../src/CostNRPAttribute.h ../src/ProfitNRPAttribute.h ../src/VonNeumannTopology.h ../src/FuzzyFitnessFunction.h ../src/FuzzyNumber.h ../src/LRFuzzyNumber.h ../src/LinearMonotonicFuzzyNumber.h ../src/ExpWeightedFuzzyNumberDecorator.h ../src/AbstractFuzzyTNorm.h ../src/MinFuzzyTNorm.h ../src/BiObjFuzzyNRPFitnessFunction.h ../src/FMOPSOAlgorithm.h ../src/FMOPSOBinaryVelocity.h ../src/BiObjFuzzyNRPFitness.h ../src/BiObjNRPVectorTraits.h ../src/BiObjNRPMOEval.h ../src/MOVectorParticle.h ../src/MOBinaryParticle.h ../src/FuzzyFitnessSingleObjectivization.h ../src/NRPMutation.h ../src/NRPCrossover.h)
add_executable(BiObjNRP_IBEA BiObjNRP_IBEA.cpp ../src/BinaryParticle.h ../src/BinaryVelocity.h ../src/FMOPSOTopology.h ../src/PartiallyOrderedSetFlight.h ../src/NRPAttribute.h ../src/NRPEvalAttributeWrapper.h ../src/NRPProblem.h ../src/CostNRPAttribute.h ../src/ProfitNRPAttribute.h ../src/VonNeumannTopology.h ../src/FuzzyFitnessFunction.h ../src/FuzzyNumber.h ../src/LRFuzzyNumber.h ../src/LinearMonotonicFuzzyNumber.h ../src/ExpWeightedFuzzyNumberDecorator.h ../src/AbstractFuzzyTNorm.h ../src/MinFuzzyTNorm.h ../src/BiObjFuzzyNRPFitnessFunction.h ../src/FMOPSOAlgorithm.h ../src/FMOPSOBinaryVelocity.h ../src/BiObjFuzzyNRPFitness.h ../src/BiObjNRPVectorTraits.h ../src/BiObjNRPMOEval.h ../src/MOVectorParticle.h ../src/MOBinaryParticle.h ../src/FuzzyFitnessSingleObjectivization.h ../src/NRPMutation.h ../src/NRPCrossover.h)

# target_link_libraries(... ${PARADISEO_LIBRARIES})
target_link_libraries(MAIN ${PARADISEO_LIBRARIES})
target_link_libraries(BiObjNRP_FMOPSO ${PARADISEO_LIBRARIES})
target_link_libraries(BiObjNRP_NSGAII ${PARADISEO_LIBRARIES})
target_link_libraries(BiObjNRP_SPEA2 ${PARADISEO_LIBRARIES})
target_link_libraries(BiObjNRP_IBEA ${PARADISEO_LIBRARIES})

configure_file(nrp1.txt nrp1.txt COPYONLY)
configure_file(nrp2.txt nrp2.txt COPYONLY)
configure_file(nrp-g1.txt nrp-g1.txt COPYONLY)