find_package(Paradiseo)

#To fill
include_directories(${PARADISEO_INCLUDE_DIR})
include_directories(${CMAKE_SOURCE_DIR}/src)
# add_executable(...)
add_executable(MAIN main.cpp ../src/BinaryParticle.h ../src/BinaryVelocity.h ../src/FMOPSO/FMOPSOTopology.h ../src/PartiallyOrderedSetFlight.h ../src/NRP/NRPAttribute.h ../src/NRP/NRPEvalAttributeWrapper.h ../src/NRP/NRPProblem.h ../src/NRP/CostNRPAttribute.h ../src/NRP/ProfitNRPAttribute.h ../src/VonNeumannTopology.h ../src/Fuzzy/FuzzyFitnessFunction.h ../src/Fuzzy/FuzzyNumber.h ../src/Fuzzy/LRFuzzyNumber.h ../src/Fuzzy/LinearMonotonicFuzzyNumber.h ../src/Fuzzy/ExpWeightedFuzzyNumberDecorator.h ../src/Fuzzy/AbstractFuzzyTNorm.h ../src/Fuzzy/MinFuzzyTNorm.h ../src/NRP/BiObjFuzzyNRPFitnessFunction.h ../src/FMOPSO/FMOPSOAlgorithm.h ../src/FMOPSO/FMOPSOBinaryVelocity.h ../src/NRP/BiObjFuzzyNRPFitness.h ../src/NRP/BiObjNRPVectorTraits.h ../src/NRP/BiObjNRPMOEval.h ../src/MOVectorParticle.h ../src/MOBinaryParticle.h ../src/Fuzzy/FuzzyFitnessSingleObjectivization.h ../src/NRP/NRPMutation.h ../src/NRP/NRPCrossover.h)

add_executable(BiObjNRP_FMOPSO BiObjNRP_FMOPSO.cpp ../src/BinaryParticle.h ../src/BinaryVelocity.h ../src/FMOPSO/FMOPSOTopology.h ../src/PartiallyOrderedSetFlight.h ../src/NRP/NRPAttribute.h ../src/NRP/NRPEvalAttributeWrapper.h ../src/NRP/NRPProblem.h ../src/NRP/CostNRPAttribute.h ../src/NRP/ProfitNRPAttribute.h ../src/VonNeumannTopology.h ../src/Fuzzy/FuzzyFitnessFunction.h ../src/Fuzzy/FuzzyNumber.h ../src/Fuzzy/LRFuzzyNumber.h ../src/Fuzzy/LinearMonotonicFuzzyNumber.h ../src/Fuzzy/ExpWeightedFuzzyNumberDecorator.h ../src/Fuzzy/AbstractFuzzyTNorm.h ../src/Fuzzy/MinFuzzyTNorm.h ../src/NRP/BiObjFuzzyNRPFitnessFunction.h ../src/FMOPSO/FMOPSOAlgorithm.h ../src/FMOPSO/FMOPSOBinaryVelocity.h ../src/NRP/BiObjFuzzyNRPFitness.h ../src/NRP/BiObjNRPVectorTraits.h ../src/NRP/BiObjNRPMOEval.h ../src/MOVectorParticle.h ../src/MOBinaryParticle.h ../src/Fuzzy/FuzzyFitnessSingleObjectivization.h ../src/NRP/NRPMutation.h ../src/NRP/NRPCrossover.h)
add_executable(BiObjNRP_NSGAII BiObjNRP_NSGAII.cpp ../src/BinaryParticle.h ../src/BinaryVelocity.h ../src/FMOPSO/FMOPSOTopology.h ../src/PartiallyOrderedSetFlight.h ../src/NRP/NRPAttribute.h ../src/NRP/NRPEvalAttributeWrapper.h ../src/NRP/NRPProblem.h ../src/NRP/CostNRPAttribute.h ../src/NRP/ProfitNRPAttribute.h ../src/VonNeumannTopology.h ../src/Fuzzy/FuzzyFitnessFunction.h ../src/Fuzzy/FuzzyNumber.h ../src/Fuzzy/LRFuzzyNumber.h ../src/Fuzzy/LinearMonotonicFuzzyNumber.h ../src/Fuzzy/ExpWeightedFuzzyNumberDecorator.h ../src/Fuzzy/AbstractFuzzyTNorm.h ../src/Fuzzy/MinFuzzyTNorm.h ../src/NRP/BiObjFuzzyNRPFitnessFunction.h ../src/FMOPSO/FMOPSOAlgorithm.h ../src/FMOPSO/FMOPSOBinaryVelocity.h ../src/NRP/BiObjFuzzyNRPFitness.h ../src/NRP/BiObjNRPVectorTraits.h ../src/NRP/BiObjNRPMOEval.h ../src/MOVectorParticle.h ../src/MOBinaryParticle.h ../src/Fuzzy/FuzzyFitnessSingleObjectivization.h ../src/NRP/NRPMutation.h ../src/NRP/NRPCrossover.h)
add_executable(BiObjNRP_SPEA2 BiObjNRP_SPEA2.cpp ../src/BinaryParticle.h ../src/BinaryVelocity.h ../src/FMOPSO/FMOPSOTopology.h ../src/PartiallyOrderedSetFlight.h ../src/NRP/NRPAttribute.h ../src/NRP/NRPEvalAttributeWrapper.h ../src/NRP/NRPProblem.h ../src/NRP/CostNRPAttribute.h ../src/NRP/ProfitNRPAttribute.h ../src/VonNeumannTopology.h ../src/Fuzzy/FuzzyFitnessFunction.h ../src/Fuzzy/FuzzyNumber.h ../src/Fuzzy/LRFuzzyNumber.h ../src/Fuzzy/LinearMonotonicFuzzyNumber.h ../src/Fuzzy/ExpWeightedFuzzyNumberDecorator.h ../src/Fuzzy/AbstractFuzzyTNorm.h ../src/Fuzzy/MinFuzzyTNorm.h ../src/NRP/BiObjFuzzyNRPFitnessFunction.h ../src/FMOPSO/FMOPSOAlgorithm.h ../src/FMOPSO/FMOPSOBinaryVelocity.h ../src/NRP/BiObjFuzzyNRPFitness.h ../src/NRP/BiObjNRPVectorTraits.h ../src/NRP/BiObjNRPMOEval.h ../src/MOVectorParticle.h ../src/MOBinaryParticle.h ../src/Fuzzy/FuzzyFitnessSingleObjectivization.h ../src/NRP/NRPMutation.h ../src/NRP/NRPCrossover.h)
add_executable(BiObjNRP_IBEA BiObjNRP_IBEA.cpp ../src/BinaryParticle.h ../src/BinaryVelocity.h ../src/FMOPSO/FMOPSOTopology.h ../src/PartiallyOrderedSetFlight.h ../src/NRP/NRPAttribute.h ../src/NRP/NRPEvalAttributeWrapper.h ../src/NRP/NRPProblem.h ../src/NRP/CostNRPAttribute.h ../src/NRP/ProfitNRPAttribute.h ../src/VonNeumannTopology.h ../src/Fuzzy/FuzzyFitnessFunction.h ../src/Fuzzy/FuzzyNumber.h ../src/Fuzzy/LRFuzzyNumber.h ../src/Fuzzy/LinearMonotonicFuzzyNumber.h ../src/Fuzzy/ExpWeightedFuzzyNumberDecorator.h ../src/Fuzzy/AbstractFuzzyTNorm.h ../src/Fuzzy/MinFuzzyTNorm.h ../src/NRP/BiObjFuzzyNRPFitnessFunction.h ../src/FMOPSO/FMOPSOAlgorithm.h ../src/FMOPSO/FMOPSOBinaryVelocity.h ../src/NRP/BiObjFuzzyNRPFitness.h ../src/NRP/BiObjNRPVectorTraits.h ../src/NRP/BiObjNRPMOEval.h ../src/MOVectorParticle.h ../src/MOBinaryParticle.h ../src/Fuzzy/FuzzyFitnessSingleObjectivization.h ../src/NRP/NRPMutation.h ../src/NRP/NRPCrossover.h)

# target_link_libraries(... ${PARADISEO_LIBRARIES})
target_link_libraries(MAIN ${PARADISEO_LIBRARIES})
target_link_libraries(BiObjNRP_FMOPSO ${PARADISEO_LIBRARIES})
target_link_libraries(BiObjNRP_NSGAII ${PARADISEO_LIBRARIES})
target_link_libraries(BiObjNRP_SPEA2 ${PARADISEO_LIBRARIES})
target_link_libraries(BiObjNRP_IBEA ${PARADISEO_LIBRARIES})

configure_file(nrp1.txt nrp1.txt COPYONLY)
configure_file(nrp2.txt nrp2.txt COPYONLY)
configure_file(nrp-g1.txt nrp-g1.txt COPYONLY)